--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -8,7 +8,11 @@
 # All rights reserved. Published under the BSD-2 license in the LICENSE file.
 ################################################################################
 
-build_mpi_prog(kagen)
-build_mpi_prog(interface_test)
+list(APPEND SRCS
+    "parse_parameters.cpp"
+)
+
+build_mpi_prog(kagen ${SRCS})
+build_mpi_prog(interface_test ${SRCS})
 
 ################################################################################
